# book-management-system

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py  main.py
app/middleware/: __init__.py  admin_perm.py  auth_required.py
app/models/: schema.sql
app/routes/: admin.py  auth.py  author.py  books.py  genre.py
app/schemas/: __init__.py  admin.py  auth.py  author.py  books.py  genre.py
app/services/: __init__.py  auth.py  author.py  books.py  genre.py
app/utils/: __init__.py
tests/: conftest.py  test_auth_routes.py  test_auth_unit.py
